# habfoo

./: .gitignore  Cargo.toml  generate-api.sh
.vim/: coc-settings.json
habfoo-api/api/: root.yaml
habfoo-api/api/types/: add-meal-request.yaml  add-meal-response.yaml  branded-food-item.yaml  calculated-food-item.yaml  composite-food-item.yaml  create-food-item-result.yaml  delete-meal-response.yaml  fetch-meals-request.yaml  fetch-meals-response.yaml  food-item-inner.yaml  food-item-link.yaml  fundamental-food-item.yaml  get-all-nutrients-response.yaml  meal.yaml  nutrient.yaml  search-input.yaml  search-item-result.yaml  single-search-item.yaml
habfoo-react/: package-lock.json  package.json  webpack.config.js
habfoo-react/src/: App.tsx  index.tsx
habfoo-react/src/components/: new-food-item.tsx  react-qr-barcode-scanner.tsx
habfoo-react/src/store/: app-state.ts
habfoo-server-mongo/: Cargo.toml  run_server.sh
habfoo-server-mongo/src/: api_impl.rs  main.rs  server.rs
habfoo_front/ios/Runner.xcodeproj/project.xcworkspace/xcuserdata/vstavenko.xcuserdatad/: UserInterfaceState.xcuserstate
oas3-rs/: Cargo.toml
oas3-rs/src/: lib.rs
oas3-rs/src/spec/: example.rs  mod.rs  parameter.rs  read_from_file.rs  ref.rs  request_body.rs  response.rs  schema.rs
openapi-types-generator/: Cargo.toml
openapi-types-generator/src/: generate_routing.rs  generate_trait.rs  generate_types.rs  lib.rs
