[package]
name = "habfoo-server-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
habfoo-api-generated = {path = "../habfoo-api-generated"}
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
async-trait = "0.1.24"
hyper = {version = "0.14", features = ["full"]}
log = "0.4.0"
tokio = { version = "1.18.2", features = ["full"] }
env_logger = "0.7"
mongodb = {version="2.2.1"}
