[package]
name = "habfoo-server-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi-types-generator = {path = "../openapi-types-generator"}
serde_json = "*"
serde_yaml = "*"
serde_qs = "*"
routerify="*"
swagger = { version = "^5.0.2"}
async-trait = "0.1.24"
hyper = {version = "^0.13"}
log = "0.4.0"
tokio = { version = "1.18.2", features = ["full"] }
env_logger = "0.7"
mongodb = {version="2.2.1"}
oas3 = {path="../oas3-rs", features=["multiple-files"]}
